--- a/index.html
+++ b/index.html
@@ -1,13 +1,47 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
    <meta charset="UTF-8">
    <meta http-equiv="X-UA-Compatible" content="IE=edge">
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+   <!-- font-family link start -->
+   <link rel="preconnect" href="https://fonts.googleapis.com">
+   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+   <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
+
+   <link rel="preconnect" href="https://fonts.googleapis.com">
+   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+   <link href="https://fonts.googleapis.com/css2?family=Spartan&display=swap" rel="stylesheet">
+   <!-- font-family link end -->
+
+   <!-- CSS link start -->
    <link rel="stylesheet" href="css/style.css">
-   <title>Document</title>
+   <!-- CSS link end -->
+
+   <title>House Design</title>
 </head>
+
 <body>
-   
 </body>
+<div class="banner">
+   <div class="nav__bar">
+      <img src="./image/logo.png" alt="Website Logo" class="logo">
+      <ul>
+         <li><a href="">Home</a></li>
+         <li><a href="">Bedroom</a></li>
+         <li><a href="">Dining</a></li>
+         <li><a href="">Kitchen</a></li>
+         <li><a href="">Backyard</a></li>
+      </ul>
+   </div>
+   <div class="content">
+      <h1>Design Your House</h1>
+      <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quidem dignissimos nulla suscipit necessitatibus <br>
+         vero tenetur illo dolorum doloribus, placeat beatae sapiente ea aliquam doloremque, repellendus incidunt
+         explicabo distinctio commodi delectus?</p>
+   </div>
+</div>
+
 </html>
