--- a/index.html
+++ b/index.html
@@ -41,6 +41,10 @@
       <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quidem dignissimos nulla suscipit necessitatibus <br>
          vero tenetur illo dolorum doloribus, placeat beatae sapiente ea aliquam doloremque, repellendus incidunt
          explicabo distinctio commodi delectus?</p>
+      <div>
+         <button type="button">WATCH MORE</button>
+         <button type="button">SUBSCRIBE</button>
+      </div>
    </div>
 </div>
 
