--- a/index.html
+++ b/index.html
@@ -42,8 +42,8 @@
          vero tenetur illo dolorum doloribus, placeat beatae sapiente ea aliquam doloremque, repellendus incidunt
          explicabo distinctio commodi delectus?</p>
       <div>
-         <button type="button">WATCH MORE</button>
-         <button type="button">SUBSCRIBE</button>
+         <button type="button"> <span></span> WATCH MORE</button>
+         <button type="button"> <span></span> SUBSCRIBE</button>
       </div>
    </div>
 </div>
