--- a/index.html
+++ b/index.html
@@ -25,27 +25,35 @@
 
 <body>
 </body>
-<div class="banner">
-   <div class="nav__bar">
-      <img src="./image/logo.png" alt="Website Logo" class="logo">
-      <ul>
-         <li><a href="">Home</a></li>
-         <li><a href="">Bedroom</a></li>
-         <li><a href="">Dining</a></li>
-         <li><a href="">Kitchen</a></li>
-         <li><a href="">Backyard</a></li>
-      </ul>
-   </div>
-   <div class="content">
+<section class="banner">
+   <nav class="nav__bar">
+      <div class="img">
+         <img src="./image/logo.png" alt="Website Logo" class="logo">
+      </div>
+      <menu class="menu">
+         <ul>
+            <li><a href="">Home</a></li>
+            <li><a href="">Bedroom</a></li>
+            <li><a href="">Dining</a></li>
+            <li><a href="">Kitchen</a></li>
+            <li><a href="">Backyard</a></li>
+         </ul>
+      </menu>
+   </nav>
+   <section class="content">
       <h1>Design Your House</h1>
-      <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quidem dignissimos nulla suscipit necessitatibus <br>
-         vero tenetur illo dolorum doloribus, placeat beatae sapiente ea aliquam doloremque, repellendus incidunt
-         explicabo distinctio commodi delectus?</p>
+      <div class="content__p">
+         <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quidem dignissimos nulla suscipit
+            necessitatibus
+            vero tenetur illo dolorum doloribus, placeat beatae sapiente ea aliquam doloremque, repellendus incidunt
+            explicabo distinctio commodi delectus?
+         </p>
+      </div>
       <div>
          <button type="button"> <span></span> WATCH MORE</button>
          <button type="button"> <span></span> SUBSCRIBE</button>
       </div>
-   </div>
-</div>
+   </section>
+</section>
 
 </html>
